Fix bug around .explain propagation